Update index.css, index.html and add web-resume.pdf

--- a/index.html
+++ b/index.html
@@ -156,6 +156,9 @@
                 <li>Semi-fluent in Italian
             </ul>
           </div> 
+          <div class="download">
+            <a href="web-resume.pdf">Download</a>
+          </div>
         </div>
     </div>
 </body>
